2002-08-20  Stephane Demurget  <demurgets@free.fr>

	* src/Makefile.am:
	* src/an_file_view.c:
	* src/aneditor.cxx:
	* src/anjuta_cbs.c:
	* src/compiler_options.h:
	* src/messagebox.c:
	* src/messagebox.h:
	* src/pixmaps.h:
	* src/project_dbase.h:
	* src/resources.h: gnome 2 port.

2002-08-14  Stephane Demurget  <demurgets@free.fr>

	Added missing keywords reported by Lucca Bellonda <lbell@tsc4.com>.

	* data/properties/sql.properties: added the DATETIME data type.

	* data/properties/html.properties: added the foreach php keyword.

2002-08-08  Stephane Demurget  <demurgets@free.fr>

	* widgets/Makefile.am: removed blank line after the last backslash
	for avoiding a warning from automake.

	* configure.in:
	* src/Makefile.am: added the ORBit-2 dep.

2002-08-08  Stephane Demurget  <demurgets@free.fr>

	* AUTHORS: added Biswa, because I wonder why noone already have
	written his name in the Anjuta's hall of fame :)

2002-08-01  Naba Kumar <kh_naba@users.sourceforge.net>

	* widgets/Makefile.am, widgets/gnomefilelist.[c,h], widgets/gnomedirlist.[c,h],
	widgets/e-shell-about-box.c: Made to compile for gnome2.
	
2002-07-31  Naba Kumar <kh_naba@users.sourceforge.net>

	* scintilla/PlatGTK.cxx, scintilla/Scintilla.cxx,
	scintilla/include/ScintillaWidget.h: Made to compile for gtk2.
	
	* configure.in, printing/print.h, printing/print.c,
	printing/print-doc.c: Made to compile for gnome2.
	
2002-07-30  Naba Kumar <kh_naba@users.sourceforge.net>

	* configure.in, acconfig.h, Makefile.am, autogen.sh, launcher/Makefile.am,
	plugins/class-gen/Makefile.am, plugins/patch/Makefile.am, plugins/sample1/Makefile.am,
	printing/Makefile.am, src/Makefile.am, tagmanager/include/Makefile.am,
	widgets/Makefile.am:
	
	Upgraded the build system to gnome2 platform.
	
2002-07-24  Biswapesh Chattopadhyay  <biswapesh_chatterjee@tcscal.co.in>

	* tm_project.c: Added *.i and *.pc to C code files.
	* data/Makefile.am, plugins/class-gen/Makefile.am: Build fixes.