@@ -23,180 +23,285 @@
 #include <sys/types.h>
 #include <sys/stat.h>
 #include <unistd.h>
+#include <errno.h>
 #include <string.h>
 
-#include <gnome.h>
+#include <gtk/gtk.h>
 
 #include "resources.h"
 #include "utilities.h"
 #include "anjuta_info.h"
 
 static GtkWidget *
-create_anjuta_info_dialog_with_less (gint height, gint width)
+create_anjuta_info_dialog_with_textview (gint width,
+					 gint height)
 {
-  GtkWidget *dialog1;
-  GtkWidget *dialog_vbox1;
-  GtkWidget *less1;
-  GtkWidget *dialog_action_area1;
-  GtkWidget *button1;
+	GtkWidget *dialog;
+	GtkWidget *vbox;
+	GtkWidget *action_area;
+	GtkWidget *textview;
+	GtkWidget *close_button;
 
-  dialog1 = gnome_dialog_new (_("Information"), NULL);
-  gtk_widget_set_usize (dialog1, 400, 250);
-  gnome_dialog_set_close (GNOME_DIALOG (dialog1), TRUE);
-  gtk_window_set_policy (GTK_WINDOW (dialog1), FALSE, TRUE, FALSE);
-  if (height < 250)
-    height = 250;
-  if (width < 400)
-    width = 400;
-  gtk_window_set_default_size (GTK_WINDOW (dialog1), width, height);
-  gtk_window_set_wmclass (GTK_WINDOW (dialog1), "infoless", "Anjuta");
-  dialog_vbox1 = GNOME_DIALOG (dialog1)->vbox;
-  gtk_widget_show (dialog_vbox1);
+	if (height < 250)
+		height = 250;
 
-  less1 = gnome_less_new ();
-  gtk_widget_show (less1);
-  gtk_box_pack_start (GTK_BOX (dialog_vbox1), less1, TRUE, TRUE, 0);
-  gnome_less_set_fixed_font  (GNOME_LESS(less1), TRUE);
+	if (width < 400)
+		width = 400;
 
-  dialog_action_area1 = GNOME_DIALOG (dialog1)->action_area;
-  gtk_widget_show (dialog_action_area1);
-  gtk_button_box_set_layout (GTK_BUTTON_BOX (dialog_action_area1),
-			     GTK_BUTTONBOX_END);
-  gtk_button_box_set_spacing (GTK_BUTTON_BOX (dialog_action_area1), 8);
+	dialog = gtk_dialog_new ();
+	gtk_window_set_title (GTK_WINDOW (dialog), _("Information"));
 
-  gnome_dialog_append_button (GNOME_DIALOG (dialog1), GNOME_STOCK_BUTTON_OK);
-  button1 = g_list_last (GNOME_DIALOG (dialog1)->buttons)->data;
-  gtk_widget_show (button1);
-  GTK_WIDGET_SET_FLAGS (button1, GTK_CAN_DEFAULT);
+	vbox = GTK_DIALOG (dialog)->vbox;
+	gtk_widget_show (vbox);
 
-  gtk_widget_ref (less1);
-  gtk_widget_show (dialog1);
+	action_area = GTK_DIALOG (dialog)->action_area;
+	gtk_container_set_border_width (GTK_CONTAINER (action_area), 5);
+	gtk_button_box_set_layout (GTK_BUTTON_BOX (action_area), GTK_BUTTONBOX_END);
+	gtk_widget_show (action_area);
 
-  return less1;
+	textview = gtk_text_view_new ();
+	gtk_box_pack_start (GTK_BOX (vbox), textview, TRUE, TRUE, 0);
+	gtk_widget_show (textview);
+
+	close_button = gtk_button_new_from_stock ("gtk-close");
+	gtk_dialog_add_action_widget (GTK_DIALOG (dialog), close_button, GTK_RESPONSE_CLOSE);
+	GTK_WIDGET_SET_FLAGS (close_button, GTK_CAN_DEFAULT);
+	gtk_widget_show (close_button);
+
+	gtk_window_set_policy (GTK_WINDOW (dialog), FALSE, TRUE, FALSE);
+	gtk_window_set_default_size (GTK_WINDOW (dialog), 400, 250);
+	gtk_window_set_wmclass (GTK_WINDOW (dialog), "infoless", "Anjuta");
+
+	g_signal_connect (dialog, "delete_event", G_CALLBACK (gtk_widget_hide), NULL);
+	gtk_widget_show (dialog);
+
+	gtk_widget_ref (textview);
+
+	return textview;
 }
 
 static GtkWidget *
-create_anjuta_info_dialog_with_clist (gint height, gint width)
+create_anjuta_info_dialog_with_treeview (gint width,
+					 gint height)
 {
-  GtkWidget *dialog1;
-  GtkWidget *dialog_vbox1;
-  GtkWidget *clist1;
-  GtkWidget *dialog_action_area1;
-  GtkWidget *scrolledwindow1;
-  GtkWidget *button1;
-  GdkFont   *font;
+	GtkWidget *dialog;
+	GtkWidget *vbox;
+	GtkWidget *action_area;
+	GtkWidget *scrolledwindow;
+	GtkTreeModel *model;
+	GtkWidget *treeview;
+	GtkWidget *close_button;
 
-  dialog1 = gnome_dialog_new (_("Information"), NULL);
-  gtk_widget_set_usize (dialog1, 400, 250);
-  gnome_dialog_set_close (GNOME_DIALOG (dialog1), TRUE);
-  gtk_window_set_policy (GTK_WINDOW (dialog1), FALSE, TRUE, FALSE);
-  if (height < 250)
-    height = 250;
-  if (width < 400)
-    width = 400;
-  gtk_window_set_default_size (GTK_WINDOW (dialog1), width, height);
-  gtk_window_set_wmclass (GTK_WINDOW (dialog1), "infoclist", "Anjuta");
-  dialog_vbox1 = GNOME_DIALOG (dialog1)->vbox;
-  gtk_widget_show (dialog_vbox1);
+	if (height < 250)
+		height = 250;
 
-  scrolledwindow1 = gtk_scrolled_window_new (NULL, NULL);
-  gtk_widget_show (scrolledwindow1);
-  gtk_box_pack_start (GTK_BOX (dialog_vbox1), scrolledwindow1, TRUE, TRUE, 0);
-  gtk_scrolled_window_set_policy (GTK_SCROLLED_WINDOW (scrolledwindow1),
-				  GTK_POLICY_AUTOMATIC, GTK_POLICY_AUTOMATIC);
+	if (width < 400)
+		width = 400;
 
-  clist1 = gtk_clist_new (1);
-  gtk_widget_show (clist1);
-  gtk_container_add (GTK_CONTAINER (scrolledwindow1), clist1);
-  gtk_clist_set_column_auto_resize (GTK_CLIST (clist1), 0, TRUE);
-  font = get_fixed_font ();
-  if (font)
-  {
-    GtkStyle* style;
-    style  = gtk_style_copy(gtk_widget_get_style(clist1));
-    if(style->font) gdk_font_unref(style->font);
-    style->font = font;
-    gtk_widget_set_style(clist1, style);
-  }
-  dialog_action_area1 = GNOME_DIALOG (dialog1)->action_area;
-  gtk_widget_show (dialog_action_area1);
-  gtk_button_box_set_layout (GTK_BUTTON_BOX (dialog_action_area1),
-			     GTK_BUTTONBOX_END);
-  gtk_button_box_set_spacing (GTK_BUTTON_BOX (dialog_action_area1), 8);
+	dialog = gtk_dialog_new ();
+	gtk_window_set_title (GTK_WINDOW (dialog), _("Information"));
 
-  gnome_dialog_append_button (GNOME_DIALOG (dialog1), GNOME_STOCK_BUTTON_OK);
-  button1 = g_list_last (GNOME_DIALOG (dialog1)->buttons)->data;
-  gtk_widget_show (button1);
-  GTK_WIDGET_SET_FLAGS (button1, GTK_CAN_DEFAULT);
+	vbox = GTK_DIALOG (dialog)->vbox;
+	gtk_widget_show (vbox);
 
-  gtk_widget_ref (clist1);
-  gtk_widget_show (dialog1);
+	action_area = GTK_DIALOG (dialog)->action_area;
+	gtk_container_set_border_width (GTK_CONTAINER (action_area), 5);
+	gtk_button_box_set_layout (GTK_BUTTON_BOX (action_area), GTK_BUTTONBOX_END);
+	gtk_widget_show (action_area);
 
-  return clist1;
+	scrolledwindow = gtk_scrolled_window_new (NULL, NULL);
+	gtk_box_pack_start (GTK_BOX (vbox), scrolledwindow, TRUE, TRUE, 0);
+	gtk_scrolled_window_set_policy (GTK_SCROLLED_WINDOW (scrolledwindow),
+					GTK_POLICY_AUTOMATIC,
+					GTK_POLICY_AUTOMATIC);
+	gtk_widget_show (scrolledwindow);
+
+	model = gtk_list_store_new (1, G_TYPE_STRING);
+
+	treeview = gtk_tree_view_new_with_model (model);
+	gtk_container_add (GTK_CONTAINER (scrolledwindow), treeview);
+	gtk_widget_show (treeview);
+
+	g_object_unref (G_OBJECT (model));
+
+	close_button = gtk_button_new_from_stock ("gtk-close");
+	gtk_dialog_add_action_widget (GTK_DIALOG (dialog), close_button, GTK_RESPONSE_CLOSE);
+	GTK_WIDGET_SET_FLAGS (close_button, GTK_CAN_DEFAULT);
+	gtk_widget_show (close_button);
+
+	gtk_window_set_policy (GTK_WINDOW (dialog), FALSE, TRUE, FALSE);
+	gtk_window_set_default_size (GTK_WINDOW (dialog), 400, 250);
+	gtk_window_set_wmclass (GTK_WINDOW (dialog), "infoless", "Anjuta");
+
+	g_signal_connect (dialog, "delete_event", G_CALLBACK (gtk_widget_hide), NULL);
+	gtk_widget_show (dialog);
+
+	gtk_widget_ref (treeview);
+
+	return treeview;
 }
 
 gboolean
-anjuta_info_show_file (const gchar * path, gint height, gint width)
+anjuta_info_show_file (const gchar *path,
+		       gint         width,
+		       gint         height)
 {
-  gboolean ret;
-  GtkWidget *less = create_anjuta_info_dialog_with_less (height, width);
-  ret = gnome_less_show_file (GNOME_LESS (less), path);
-  gtk_widget_unref (less);
-  return ret;
+	FILE *f;
+
+	g_return_val_if_fail (path != NULL, FALSE);
+
+	if (!g_file_exists (path))
+		return FALSE;
+
+	if ((f = fopen (path, "r")) == NULL)
+		return FALSE;
+
+	if (!anjuta_info_show_filestream (f, width, height)) {
+		int errno_bak = errno;
+
+		fclose (f);
+
+		errno = errno_bak;
+
+		return FALSE;
+	}
+
+	return (fclose (f) != 0) ? FALSE : TRUE;
 }
 
 gboolean
-anjuta_info_show_command (const gchar * command_line, gint height, gint width)
+anjuta_info_show_command (const gchar *command_line,
+			  gint         width,
+			  gint         height)
 {
-  gboolean ret;
-  GtkWidget *less = create_anjuta_info_dialog_with_less (height, width);
-  ret = gnome_less_show_command (GNOME_LESS (less), command_line);
-  gtk_widget_unref (less);
-  return ret;
+	GtkWidget *textview;
+	GError *err = NULL;
+	gchar *std_output = NULL;
+	gboolean ret;
+
+	g_return_val_if_fail (command_line != NULL, FALSE);
+
+	/* Note: we could use popen like anjuta_info_show_file, but g_spawn is safier */
+
+	if (!g_spawn_command_line_sync (command_line, &std_output, NULL, NULL, &err)) {
+		g_warning (err->message);
+		g_error_free (err);
+
+		return FALSE;
+	}
+
+	if (!g_utf8_validate (std_output, strlen (std_output), NULL))
+		g_warning ("Invalid UTF-8 data encountered reading output of command '%s'", command_line);
+
+	ret = anjuta_info_show_string (std_output, width, height);
+
+	g_free (std_output);
+
+	return ret;
 }
 
 gboolean
-anjuta_info_show_string (const gchar * s, gint height, gint width)
+anjuta_info_show_string (const gchar *s,
+			 gint         width,
+			 gint         height)
 {
-  GtkWidget *less = create_anjuta_info_dialog_with_less (height, width);
-  gnome_less_show_string (GNOME_LESS (less), s);
-  gtk_widget_unref (less);
-  return TRUE;
+	GtkWidget *textview;
+	GtkTextBuffer *buffer;
+
+	g_return_val_if_fail (s != NULL, FALSE);
+
+	textview = create_anjuta_info_dialog_with_textview (width, height);
+	buffer = gtk_text_view_get_buffer (GTK_TEXT_VIEW (textview));
+	gtk_text_buffer_set_text (buffer, s, strlen (s));
+
+	gtk_widget_unref (textview);
+
+	return TRUE;
+}
+
+#define ANJUTA_INFO_TEXTVIEW_BUFSIZE 1024
+
+gboolean
+anjuta_info_show_filestream (FILE *f,
+			     gint  width,
+			     gint  height)
+{
+	GtkWidget *textview;
+	GtkTextBuffer *buffer;
+	gchar buf[ANJUTA_INFO_TEXTVIEW_BUFSIZE];
+	gboolean ret;
+
+	g_return_val_if_fail (f != NULL, FALSE);
+
+	textview = create_anjuta_info_dialog_with_textview (width, height);
+	buffer = gtk_text_view_get_buffer (GTK_TEXT_VIEW (textview));
+
+        errno = 0; /* Reset it to detect errors */
+
+	while (1) {
+		GtkTextIter iter;
+		gchar *s;
+
+		if ((s = fgets (buf, ANJUTA_INFO_TEXTVIEW_BUFSIZE, f)) == NULL)
+			break;
+
+		gtk_text_buffer_get_end_iter (buffer, &iter);
+		gtk_text_buffer_insert (buffer, &iter, buf, strlen (buf));
+	}
+
+	gtk_widget_unref (textview);
+
+	return errno ? FALSE : TRUE;
 }
 
 gboolean
-anjuta_info_show_filestream (FILE * f, gint height, gint width)
+anjuta_info_show_fd (int  file_descriptor,
+		     gint width,
+		     gint height)
 {
-  gboolean ret;
-  GtkWidget *less = create_anjuta_info_dialog_with_less (height, width);
-  ret = gnome_less_show_filestream (GNOME_LESS (less), f);
-  gtk_widget_unref (less);
-  return ret;
-}
+	FILE *f;
+	gboolean ret;
 
-gboolean
-anjuta_info_show_fd (int file_descriptor, gint height, gint width)
-{
-  gboolean ret;
-  GtkWidget *less = create_anjuta_info_dialog_with_less (height, width);
-  ret = gnome_less_show_fd (GNOME_LESS (less), file_descriptor);
-  gtk_widget_unref (less);
-  return ret;
+	if ((f = fdopen (file_descriptor, "r")) == NULL)
+		return FALSE;
+
+	if (!anjuta_info_show_filestream (f, width, height)) {
+		int errno_bak = errno;
+
+		fclose (f);
+
+		errno = errno_bak;
+
+		return FALSE;
+	}
+
+	return (fclose (f) != 0) ? FALSE : TRUE;
 }
 
 void
-anjuta_info_show_list (GList* list, gint height, gint width)
+anjuta_info_show_list (GList* list,
+		       gint   width,
+		       gint   height)
 {
-  GtkWidget *clist = create_anjuta_info_dialog_with_clist (height, width);
-  gtk_clist_freeze(GTK_CLIST(clist));
-  while(list)
-  {
-     gchar *temp;
-     temp = remove_white_spaces(list->data);
-     gtk_clist_append(GTK_CLIST(clist), &temp);
-     g_free(temp);
-     list = g_list_next(list);
-  }
-  gtk_clist_thaw(GTK_CLIST(clist));
-  gtk_widget_unref (clist);
+	GtkWidget *treeview;
+	GtkTreeModel *model;
+
+	g_return_if_fail (list != NULL);
+
+	treeview = create_anjuta_info_dialog_with_treeview (width, height);
+	model = gtk_tree_view_get_model (GTK_TREE_VIEW (treeview));
+
+	for (; list; list = g_list_next (list)) {
+		GtkTreeIter iter;
+		gchar *tmp;
+
+		tmp = remove_white_spaces (list->data);
+
+		gtk_list_store_append (GTK_LIST_STORE (model), &iter);
+		gtk_list_store_set (GTK_LIST_STORE (model), &iter, 0, tmp, -1);
+
+		g_free (tmp);
+	}
+	
+	gtk_widget_unref (treeview);
 }
